Fixed bug where filters would have spacing in-between

--- a/pages/blog/Blog.module.scss
+++ b/pages/blog/Blog.module.scss
@@ -67,8 +67,10 @@
 
 .filters {
   display: flex;
+  justify-content: flex-start;
   flex-direction: column;
   flex: 0.3;
+  height: 450px;
   padding-left: 20px;
   border-left: 1px solid $secondaryBorder;
 
